# example-snake

./: .gitignore  README.md  index.html
code/rust/: Cargo.toml
code/rust/src/: main.rs
code/rust/src/falang/: DrawFood.rs  DrawPoints.rs  GameApi.rs  State.rs  clearScreen.rs  drawSnake.rs  drawSnakeSquare.rs  falang_global.rs  getColors.rs  getNewFoodPoint.rs  getNextPoint.rs  getRandomPoint.rs  isGameOver.rs  main.rs  mod.rs
code/ts/: package-lock.json  package.json  tsconfig.json
code/ts/public/: index.html  index.js
code/ts/src/: index.ts
code/ts/src/falang/: DrawFood.ts  DrawPoints.ts  GameApi.ts  State.ts  _falang.ts  clearScreen.ts  drawSnakeSquare.ts  getColors.ts  getNewFoodPoint.ts  getNextPoint.ts  getRandomPoint.ts  isGameOver.ts  main.ts
falang/config/: export.json
