[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cortex-m = "0.6"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-semihosting = "0.5"
panic-semihosting = "0.5"
cortex-m-rt = "0.6.11"
ili9341 = { git = "https://github.com/flaminggoat/ili9341-rs.git", branch = "parallel_gpio" }
embedded-hal = "0.2.3"
micro_rand = "0.0.1"
embedded-alloc = "0.5.1"

[dependencies.embedded-graphics]
version = "0.6.0-alpha.2"

[dependencies.stm32f4xx-hal]
version = "0.6.0"
features = ["stm32f429", "rt"]
